[package]
edition = "2021"
name = "qasmsim"
description = "A QASM interpreter and quantum simulator in Rust"
version = "1.3.1"  # remember to update html_root_url
repository = "https://github.com/delapuente/qasmsim.git"
license = "MIT"
authors = ["Salvador de la Puente González <hola@salvadelapuente.com>"]
homepage = "https://github.com/delapuente/qasmsim/"
keywords = ["quantum", "qasm", "computing"]
categories = ["simulation", "science", "command-line-utilities"]
readme = "README.md"
exclude = ["samples/*", "tests/*", "www/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["output"]
output = ["dep:prettytable-rs", "dep:csv"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
num = "0.4.1"
lalrpop-util = "0.20.0"
regex = "1.10"
cached = "0.24.1" # 0.25.x versions force `syn` dependency version to be 1.0.66 which contains a bug that breaks the build. See https://github.com/rustwasm/wasm-bindgen/issues/2508 for the remediation: We just found that forcing rollback of syn from 1.0.66 to 1.0.65 appears to fix this issue. cargo update -p syn --precise 1.0.65
float-cmp = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.5"
prettytable-rs = { version = "0.10.0", default-features = false, optional = true }
csv = { version = "1.3", default-features = false, optional = true }
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
indoc = "2.0.4"
unindent = "0.2.3"

[build-dependencies]
lalrpop = "0.20.0"
